app-httpd/05-webhttpd-mw-stripprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: strip-prefix
    namespace: webhttpd
spec:
    stripPrefix:
        prefixes:
            - /
