app-httpd/06-webhttpd-mw-main.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: main
    namespace: webhttpd
spec:
    chain:
        middlewares:
            - name: strip-prefix
            - name: headers
