app-httpd/02-webhttpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: webhttpd
spec:
  selector:
    matchLabels:
      app: httpd
  replicas: 2
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:
        - containerPort: 80
