app-httpd/03-webhttpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: httpd
  namespace: webhttpd
spec:
  selector:
    app: httpd
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
